# CoachEduAI

./: 404.html  500.html  README.md  base.html  chat.html  chatbot.html  coachedual.db  contest_detail.html  contests.html  create_contest.html  create_exercise.html  create_group.html  edit_profile.html  exercise_detail.html  exercises.html  group_detail.html  groups.html  home.html  index.html  login.html  main.js  main.py  notifications.html  profile.html  pyproject.toml  ranking.html  register_step1.html  register_step2.html  register_step3.html  requirements.txt  run_server.py  search_results.html  simple_server.py  start_server.bat  style.css
